still working on route issues

--- a/affiliate-website/backend/Pipfile
+++ b/affiliate-website/backend/Pipfile
@@ -11,6 +11,8 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-cors = "*"
 python-dotenv = "*"
+flask-session = "*"
+flask-login = "*"
 
 [dev-packages]
 
