--- a/affiliate-website/package.json
+++ b/affiliate-website/package.json
@@ -3,10 +3,10 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"install:frontend": "cd frontend && npm install",
-		"install:backend": "cd backend && pip install -r requirements.txt",
-		"build:frontend": "cd frontend && npm run build",
-		"start:backend": "cd backend && python app.py",
+		"install:frontend": "npm install --prefix frontend",
+		"install:backend": "pip install -r backend/requirements.txt",
+		"build:frontend": "npm run build --prefix frontend",
+		"start:backend": "python backend/app.py",
 		"install": "npm run install:frontend && npm run install:backend",
 		"build": "npm run build:frontend",
 		"start": "npm run start:backend"
